{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 441,
  "lineage": "875ecc5a-ab62-bd12-f96a-6b47bd480968",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:security-group/sg-025e47115c54477ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025e47115c54477ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08c9358bec2f66e1e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220530141400123100000003",
            "name_prefix": "terraform-",
            "owner_id": "093862325756",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:security-group/sg-0c3a9667678406c70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3a9667678406c70",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0732078ac2d2f4e7c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220530141401762100000004",
            "name_prefix": "terraform-",
            "owner_id": "093862325756",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:loadbalancer/app/ecs-demo-internal-alb/dfb5dc9491875b99",
            "arn_suffix": "app/ecs-demo-internal-alb/dfb5dc9491875b99",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ecs-demo-internal-alb-936163594.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:loadbalancer/app/ecs-demo-internal-alb/dfb5dc9491875b99",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-demo-internal-alb",
            "security_groups": [
              "sg-08c9358bec2f66e1e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052739f3eb8ba1491"
              },
              {
                "subnet_id": "subnet-08fce230bbb99a154"
              }
            ],
            "subnets": [
              "subnet-052739f3eb8ba1491",
              "subnet-08fce230bbb99a154"
            ],
            "vpc_id": "vpc-0768cf77dd4b48b2e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No routes defined",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:loadbalancer/app/ecs-demo-internal-alb/dfb5dc9491875b99",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal-alb.aws_alb.alb",
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Customer",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/customer-tg/5bc2230daa31f2e6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener-rule/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c/7198b82abf85bb16",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/customer*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener-rule/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c/7198b82abf85bb16",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal-alb.aws_alb.alb",
            "module.internal-alb.aws_alb_listener.alb_listener",
            "module.internal-alb.aws_alb_target_group.alb_target_group",
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Transaction",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/transaction-tg/10c4980d02fbc217",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener-rule/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c/7f1046698fa4effe",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/transaction*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener-rule/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c/7f1046698fa4effe",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener/app/ecs-demo-internal-alb/dfb5dc9491875b99/e2785e4117b4cd9c",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal-alb.aws_alb.alb",
            "module.internal-alb.aws_alb_listener.alb_listener",
            "module.internal-alb.aws_alb_target_group.alb_target_group",
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Customer",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/customer-tg/5bc2230daa31f2e6",
            "arn_suffix": "targetgroup/customer-tg/5bc2230daa31f2e6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/customer-tg/5bc2230daa31f2e6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "customer-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Transaction",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/transaction-tg/10c4980d02fbc217",
            "arn_suffix": "targetgroup/transaction-tg/10c4980d02fbc217",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/transaction-tg/10c4980d02fbc217",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "transaction-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal_alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:security-group/sg-08c9358bec2f66e1e",
            "description": "ecs-demo-internal-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c9358bec2f66e1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-demo-internal-alb-sg",
            "name_prefix": "",
            "owner_id": "093862325756",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:loadbalancer/app/ecs-demo-public-alb/b8255cdabd8d75b0",
            "arn_suffix": "app/ecs-demo-public-alb/b8255cdabd8d75b0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-demo-public-alb-1210738134.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:loadbalancer/app/ecs-demo-public-alb/b8255cdabd8d75b0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-demo-public-alb",
            "security_groups": [
              "sg-0732078ac2d2f4e7c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06370f99abac3eb52"
              },
              {
                "subnet_id": "subnet-0b2aada0ff315e758"
              }
            ],
            "subnets": [
              "subnet-06370f99abac3eb52",
              "subnet-0b2aada0ff315e758"
            ],
            "vpc_id": "vpc-0768cf77dd4b48b2e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener/app/ecs-demo-public-alb/b8255cdabd8d75b0/fb8ff671b0b801e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No routes defined",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener/app/ecs-demo-public-alb/b8255cdabd8d75b0/fb8ff671b0b801e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:loadbalancer/app/ecs-demo-public-alb/b8255cdabd8d75b0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public-alb.aws_alb.alb",
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "WebApp",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/webapp-tg/1f9429d5abb76e55",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener-rule/app/ecs-demo-public-alb/b8255cdabd8d75b0/fb8ff671b0b801e8/317bd779e71c3baf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener-rule/app/ecs-demo-public-alb/b8255cdabd8d75b0/fb8ff671b0b801e8/317bd779e71c3baf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:listener/app/ecs-demo-public-alb/b8255cdabd8d75b0/fb8ff671b0b801e8",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public-alb.aws_alb.alb",
            "module.public-alb.aws_alb_listener.alb_listener",
            "module.public-alb.aws_alb_target_group.alb_target_group",
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "WebApp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/webapp-tg/1f9429d5abb76e55",
            "arn_suffix": "targetgroup/webapp-tg/1f9429d5abb76e55",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:093862325756:targetgroup/webapp-tg/1f9429d5abb76e55",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:security-group/sg-0732078ac2d2f4e7c",
            "description": "ecs-demo-public-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0732078ac2d2f4e7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-demo-public-alb-sg",
            "name_prefix": "",
            "owner_id": "093862325756",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e761ed1de1d0d27e",
            "domain": "vpc",
            "id": "eipalloc-0e761ed1de1d0d27e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-134-167-37.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.167.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:internet-gateway/igw-0e3e6358bf9882f23",
            "id": "igw-0e3e6358bf9882f23",
            "owner_id": "093862325756",
            "tags": {
              "Env": "dev",
              "Name": "ecs-demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demo"
            },
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e761ed1de1d0d27e",
            "connectivity_type": "public",
            "id": "nat-0e94f7f45062a9e41",
            "network_interface_id": "eni-084c693a7b23314c7",
            "private_ip": "10.10.50.117",
            "public_ip": "3.134.167.37",
            "subnet_id": "subnet-0b2aada0ff315e758"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0597d7fa07205ba8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e94f7f45062a9e41",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0597d7fa07205ba8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e3e6358bf9882f23",
            "id": "r-rtb-03a6b6eb6236eb5701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a6b6eb6236eb570",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:route-table/rtb-0597d7fa07205ba8b",
            "id": "rtb-0597d7fa07205ba8b",
            "owner_id": "093862325756",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "ecs-demoprivate-route-table"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demoprivate-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:route-table/rtb-03a6b6eb6236eb570",
            "id": "rtb-03a6b6eb6236eb570",
            "owner_id": "093862325756",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "ecs-demopublic-route-table"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demopublic-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aba044222ca82994",
            "route_table_id": "rtb-0597d7fa07205ba8b",
            "subnet_id": "subnet-052739f3eb8ba1491"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076f360491472f586",
            "route_table_id": "rtb-0597d7fa07205ba8b",
            "subnet_id": "subnet-08fce230bbb99a154"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0770fe8b26a23eb3c",
            "route_table_id": "rtb-03a6b6eb6236eb570",
            "subnet_id": "subnet-0b2aada0ff315e758"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbd6d78e44706b79",
            "route_table_id": "rtb-03a6b6eb6236eb570",
            "subnet_id": "subnet-06370f99abac3eb52"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:subnet/subnet-052739f3eb8ba1491",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052739f3eb8ba1491",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093862325756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-demo-private-subnet-0"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demo-private-subnet-0"
            },
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:subnet/subnet-08fce230bbb99a154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fce230bbb99a154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093862325756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-demo-private-subnet-1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demo-private-subnet-1"
            },
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:subnet/subnet-0b2aada0ff315e758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2aada0ff315e758",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "093862325756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-demo-public-subnet-0"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demo-public-subnet-0"
            },
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:subnet/subnet-06370f99abac3eb52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06370f99abac3eb52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "093862325756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-demo-public-subnet-1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demo-public-subnet-1"
            },
            "vpc_id": "vpc-0768cf77dd4b48b2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093862325756:vpc/vpc-0768cf77dd4b48b2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02a5895c0fe1028c2",
            "default_route_table_id": "rtb-0d8a56c1081d0a8e7",
            "default_security_group_id": "sg-0a19b7379188cd858",
            "dhcp_options_id": "dopt-07433bbaf83775fc5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0768cf77dd4b48b2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8a56c1081d0a8e7",
            "owner_id": "093862325756",
            "tags": {
              "Env": "dev",
              "Name": "ecs-demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-demo"
            }
          }
        }
      ]
    }
  ]
}